--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -45,53 +45,12 @@
  行解析，
      使用此种方式可以实现RESTful风格的url
       -->
-    <servlet-name>springmvc</servlet-name>
-    <url-pattern>/</url-pattern>
+  <servlet-name>springmvc</servlet-name>
+  <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <!-- Servlet Filters ================================================ -->
 
-  <!--
-    - Declare a filter for multipart MIME handling
-    -->
-  <!--<filter>-->
-    <!--<description>Multipart MIME handling filter for Cocoon</description>-->
-    <!--<display-name>Cocoon multipart filter</display-name>-->
-    <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-    <!--<filter-class>org.apache.cocoon.servlet.multipart.MultipartFilter</filter-class>-->
-  <!--</filter>-->
-
-  <!--
-    - Declare a filter for debugging incoming request
-    -->
-  <!--<filter>-->
-    <!--<description>Log debug information about each request</description>-->
-    <!--<display-name>Cocoon debug filter</display-name>-->
-    <!--<filter-name>CocoonDebugFilter</filter-name>-->
-    <!--<filter-class>org.apache.cocoon.servlet.DebugFilter</filter-class>-->
-  <!--</filter>-->
-
-  <!-- Filter mappings ================================================ -->
-
-  <!--
-    - Use the Cocoon multipart filter together with the Cocoon demo webapp
-    -->
-  <!--<filter-mapping>-->
-    <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-    <!--<servlet-name>Cocoon</servlet-name>-->
-  <!--</filter-mapping>-->
-  <!--<filter-mapping>-->
-    <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-    <!--<servlet-name>DispatcherServlet</servlet-name>-->
-  <!--</filter-mapping>-->
-
-  <!--
-    - Use the Cocoon debug filter together with the Cocoon demo webapp
-  <filter-mapping>
-    <filter-name>CocoonDebugFilter</filter-name>
-    <servlet-name>Cocoon</servlet-name>
-  </filter-mapping>
-    -->
-
-
-
+  <error-page>
+    <error-code>500</error-code>
+    <location>/error_500.jsp</location>
+  </error-page>
 </web-app>
