--- a/web/src/main/resources/config/jdbc.properties
+++ b/web/src/main/resources/config/jdbc.properties
@@ -9,9 +9,8 @@ c3p0.numHelperThreads=3
 c3p0.maxIdleTime=600
 
 #mysql database setting
-jdbc.type=MySql
+#jdbc.type=MySql
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.driverClassName=net.bull.javamelody.JdbcDriver
 
 jdbc_Mysql.url=jdbc:MYSQL://localhost:3306/sne?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 jdbc_Mysql.username=root
