--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,29 @@
-<web-app version="2.4"
-         xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns:context="http://www.springframework.org/schema/context"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
-	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<!--<web-app version="2.4"-->
+         <!--xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
+         <!--xmlns:context="http://www.springframework.org/schema/context"-->
+         <!--xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee-->
+	<!--http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">-->
+  <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 
   <display-name>Spring MVC Application</display-name>
+
+  <context-param>
+    <param-name>log4jExposeWebAppRoot</param-name>
+    <param-value>false</param-value>
+  </context-param>
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:config/log4j.properties</param-value>
+  </context-param>
+  <!--&lt;!&ndash;启动一个watchdog线程每300秒扫描一下log4j配置文件的变化&ndash;&gt;-->
+  <context-param>
+    <param-name>log4jRefreshInterval</param-name>
+    <param-value>300000</param-value>
+  </context-param>
+  <!--spring log4j监听器-->
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
 
   <!-- Servlet Context Listener ======================================= -->
 
