--- a/common/pom.xml
+++ b/common/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>log4j</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>net.spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.11.4</version>
+        </dependency>
     </dependencies>
 
     <build>
