--- a/daos/pom.xml
+++ b/daos/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
